--- a/config.toml
+++ b/config.toml
@@ -1,16 +1,84 @@
 # The URL the site will be built for
 base_url = "https://amirography.com"
 
-# Whether to automatically compile all Sass files in the sass directory
-compile_sass = true
+title = "Amirography"
+description = "Home to a nerd."
 
-# Whether to build a search index to be used later on by a JavaScript library
-build_search_index = true
+
+default_language = "en"
+build_search_index = true 
+compile_sass = true
+minify_html = true               # Whether to minify html code
+theme = "serene"
+output_dir = "public"
+
+generate_feed = false            # Whether to generate a feed file in root, read docs for more info about rss feed
+feed_filename = "feed.xml"       # The file name of feed, "feed.xml" / "atom.xml" / "rss.xml", read docs for more info
+
+taxonomies = [
+    {name = "tags"},             # Keep this
+    {name = "categories"}        # Keep this
+]
 
 [markdown]
-# Whether to do syntax highlighting
-# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
+extra_syntaxes = []          
+highlight_theme = "nord"         # The highlight theme, choose one at https://www.getzola.org/documentation/getting-started/configuration/#syntax-highlighting
+render_emoji = false 
+
+external_links_target_blank = false
+external_links_no_follow = true
+external_links_no_referrer = true
+smart_punctuation = false
+
+[slugify]
+paths = "safe"
+taxonomies = "safe"
+anchors = "safe"
 
 [extra]
-# Put all your custom variables here
+
+
+name = "Amir Alesheikh"                    # Your name
+id = "amirography"                      # Your id/username/handle
+bio = "back-end developer / rustacean / gopher / previous cognitive science student / rationalist"                     # Your bio
+avatar = "img/avatar.webp"       # Your avatar
+
+show_id = true                   # Whether to show your id in homepage
+show_projects = false             # Whether to show projects page
+
+#============== Icons, you can choose at https://remixicon.com/ ====
+blog_icon = "ri-pen-nib-line"          
+projects_icon = "ri-compasses-2-line"
+home_icon = "ri-user-6-line"
+rss_icon = "ri-rss-line"
+toc_icon = "ri-menu-2-line"
+
+#============== Social media links =================================
+links = [
+    {name = "Mostodon", icon = "ri-mastodon-line", url = "https://fosstodon.org/amirography"},
+    {name = "GitHub", icon = "ri-github-line", url = "https://github.com/amirography"},
+    {name = "Linkedin", icon = "ri-linkedin-line", url = "https://linkedin.com/in/amirography"},
+    {name = "Twitter", icon = "ri-twitter-line", url = "https://twitter.com/amirography"},
+    # Your can add more links
+]
+
+#============== Feed ===============================================
+feed_in_blog_section = true      # Whether to make feed file in blog section, url will be https://example.com/blog/feed.xml, read docs for more info about rss feed
+
+#============== Some feature switches ================================
+toc = true                       # Whether to show Table-Of-Contents [Can be overridden by page config]
+blur_effect = true               # Whether to turn on blur effect on navigation bar
+back_to_top_button = true        # Whether to show Back-To-Top button
+progress_bar = true              # Whether to show reading progress bar
+cc_license = true               # Whether to show Creative-Commons statement [Can be overridden by page config]
+cc_license_statement = "This work is licensed under [CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)."  # The Creative-Commons statement
+outdate_warn = false             # Whether to show outdate warning [Can be overridden by page config]
+
+#============== Footer =============================================
+footer_copyright_name = "amirography"
+footer_copyright_year = "2022"
+footer_credits = true            # Whether to show "Powered by Zola and Serene" in footer
+
+comment = "none"                 # gitalk / disqus / disqus_js
+analytics = "none"               # google_analytics / cloudflare_web_analytics / umami / baidu_tongji
