--- a/config.toml
+++ b/config.toml
@@ -56,7 +56,7 @@ toc_icon = "ri-menu-2-line"
 
 #============== Social media links =================================
 links = [
-    {name = "Mostodon", icon = "ri-mastodon-line", url = "https://fosstodon.org/@Amirography"},
+    {name = "Mastodon", icon = "ri-mastodon-line", url = "https://fosstodon.org/@Amirography"},
     {name = "GitHub", icon = "ri-github-line", url = "https://github.com/amirography"},
     {name = "Linkedin", icon = "ri-linkedin-line", url = "https://linkedin.com/in/amirography"},
     {name = "Twitter", icon = "ri-twitter-line", url = "https://twitter.com/amirography"},
@@ -68,17 +68,17 @@ feed_in_blog_section = true      # Whether to make feed file in blog section, ur
 
 #============== Some feature switches ================================
 toc = true                       # Whether to show Table-Of-Contents [Can be overridden by page config]
-blur_effect = true               # Whether to turn on blur effect on navigation bar
+blur_effect = false               # Whether to turn on blur effect on navigation bar
 back_to_top_button = true        # Whether to show Back-To-Top button
 progress_bar = true              # Whether to show reading progress bar
-cc_license = true               # Whether to show Creative-Commons statement [Can be overridden by page config]
+cc_license = false               # Whether to show Creative-Commons statement [Can be overridden by page config]
 cc_license_statement = "This work is licensed under [CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)."  # The Creative-Commons statement
 outdate_warn = false             # Whether to show outdate warning [Can be overridden by page config]
 
 #============== Footer =============================================
 footer_copyright_name = "amirography"
 footer_copyright_year = "2022"
-footer_credits = true            # Whether to show "Powered by Zola and Serene" in footer
+footer_credits = false            # Whether to show "Powered by Zola and Serene" in footer
 
 comment = "none"                 # gitalk / disqus / disqus_js
 analytics = "none"               # google_analytics / cloudflare_web_analytics / umami / baidu_tongji
