feat: improve showing description

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 base_url = "https://amirography.com"
-title = "A blogging thing"
+title = "Some Essays, Tutorials And Other Stuff By Amirography"
 description = "Home to a nerd."
 
 
